# zeekoe

./: .env  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.rs  rust-toolchain  rustfmt.toml  sqlx-data.json  test-zeekoe.py  zkchannel_pytezos_mgr.py
.github/actions/e2e-action/: action.yml  entrypoint.sh
.github/workflows/: e2e-test.yml  rust.yml
dev/: Customer.toml  Merchant.toml  create-database  customer_private_key  generate-certificates  test-zeekoe.py
examples/customer/: main.rs
examples/merchant/: main.rs
integration_tests/: Dockerfile  common.rs  main.rs
integration_tests/tests/: close.rs  customer_close.rs  establish.rs  mod.rs  mutual_close.rs  pay.rs
proto/: activate.proto  establish.proto  pay.proto  wire.proto
pytezos-demo/: README.md  convert_format.sh  run_close.sh  run_establish.sh  zkchannel_pytezos_mgr.py
src/: amount.rs  chain.rs  cli.rs  config.rs  currencies.rs  customer.rs  database.rs  defaults.rs  lib.rs  main.rs  merchant.rs  notify.rs  protocol.rs  revocation.rs  timeout.rs  transport.rs  util.rs  wire.rs  zkchannels.rs
src/canonicalize_json_micheline/: Cargo.toml
src/canonicalize_json_micheline/src/: lib.rs
src/cli/: customer.rs  merchant.rs
src/config/: customer.rs  merchant.rs
src/customer/: close.rs  establish.rs  manage.rs  pay.rs
src/database/: customer.rs  merchant.rs
src/database/customer/: state.rs
src/database/migrations/customer/: 202106221018_setup.sql
src/database/migrations/merchant/: 20210422153558_setup.sql  202106211725_setup.sql  setup.sql
src/escrow/: mod.rs  notify.rs  tezos.rs  zkchannel_contract.tz  zkchannels_contract.json
src/merchant/: main.rs
src/transport/: channel.rs  client.rs  handshake.rs  io_stream.rs  pem.rs  server.rs
src/wire/: dynamic.rs
src/zkchannels/: customer.rs  merchant.rs
src/zkchannels/customer/: close.rs  establish.rs  manage.rs  pay.rs  watch.rs
src/zkchannels/merchant/: approve.rs  close.rs  establish.rs  manage.rs  parameters.rs  pay.rs
testing-tool/: decompress.py  format_output.py
tests/: tezos.rs
tests/common/: mod.rs
