[package]
name = "zeekoe"
version = "0.1.0"
authors = ["Kenny Foner <kwf@boltlabs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zeekoe"
path = "src/lib.rs"

[[bin]]
name = "zkchannel"
path = "src/bin/main.rs"

[[bin]]
name = "zkchannel-customer"
path = "src/bin/customer/main.rs"

[[bin]]
name = "zkchannel-merchant"
path = "src/bin/merchant/main.rs"

[features]
allow_explicit_certificate_trust = []

[dependencies]
zkabacus-crypto = { git = "ssh://git@github.com/boltlabs-inc/libzkchannels-crypto.git", branch = "main", features = ["sqlite"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.22"
anyhow = "1"
webpki = "0.21"
webpki-roots = "0.21"
async-trait = "0.1"
sha2 = "0.9"
digest = "0.9"
generic-array = "0.14"
ring = "0.16"
futures = "0.3"
num = "0.3.1"
bincode = "1.3"
serde = "1"
thiserror = "1"
typenum = "1.12"
pem = "0.8"
structopt = "0.3"
humantime = "2.1"
humantime-serde = "1"
http = "0.2"
edit = "0.1"
directories = "3"
http-serde = "1"
toml = "0.5"
read-restrict = "0.3"
rust_decimal = "1"
num-traits = "0.2"
reqwest = "0.11"
rand = "0.8"
url = { version = "2.2", features = ["serde"] }
rusty-money = { version = "0.4", features = ["crypto"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
zeroize = { version = "1.2", features = ["zeroize_derive"] }
dialectic = { git = "ssh://git@github.com/boltlabs-inc/dialectic.git", branch = "main" }
dialectic-tokio-serde = { git = "ssh://git@github.com/boltlabs-inc/dialectic.git", branch = "main" }
dialectic-tokio-serde-bincode = { git = "ssh://git@github.com/boltlabs-inc/dialectic.git", branch = "main" }
dialectic-reconnect = { features = ["serde", "humantime-serde"], git = "ssh://git@github.com/boltlabs-inc/dialectic.git", branch = "main" }
sqlx = { version = "0.5.2", features = ["any", "migrate", "offline", "runtime-tokio-rustls", "sqlite"] }

[dev-dependencies]
rand = "0.8.3"
