[package]
name = "zeekoe"
version = "0.1.0"
authors = ["Kenny Foner <kwf@boltlabs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zeekoe"
path = "src/lib.rs"

[[bin]]
name = "zkchannel"
path = "src/bin/main.rs"

[[bin]]
name = "zkchannel-customer"
path = "src/bin/customer.rs"

[[bin]]
name = "zkchannel-merchant"
path = "src/bin/merchant.rs"

[features]
allow_explicit_certificate_trust = []
allow_custom_self_delay = []


[dependencies]
zkabacus-crypto = { git = "https://github.com/boltlabs-inc/libzkchannels-crypto.git", features = ["sqlite"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.22"
anyhow = "1"
webpki = "0.21"
webpki-roots = "0.21"
async-trait = "0.1"
sha2 = "0.9"
sha3 = "0.9.1"
digest = "0.9"
generic-array = "0.14"
ring = "0.16"
futures = "0.3"
num = "0.3.1"
bincode = "1.3"
serde = "1"
thiserror = "1"
typenum = "1.12"
pem = "0.8"
structopt = "0.3"
humantime = "2.1"
humantime-serde = "1"
http = "0.2"
edit = "0.1"
directories = "3"
http-serde = "1"
toml = "0.5"
read-restrict = "0.3"
rust_decimal = "1"
num-traits = "0.2"
reqwest = "0.11"
rand = "0.8"
serde_with = "1.9"
skiplist = "0.4"
serde_json = "1"
hex = "0.4"
inline-python = "0.7"
pyo3 = "0.14"
lazy_static = "1.4"
url = { version = "2.2", features = ["serde"] }
rusty-money = { version = "0.4", features = ["crypto"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
zeroize = { version = "1.2", features = ["zeroize_derive"] }
dialectic = { git = "https://github.com/boltlabs-inc/dialectic.git", branch = "main" }
dialectic-tokio-serde = { git = "https://github.com/boltlabs-inc/dialectic.git", branch = "main" }
dialectic-tokio-serde-bincode = { git = "https://github.com/boltlabs-inc/dialectic.git", branch = "main" }
dialectic-reconnect = { features = ["serde", "humantime-serde"], git = "https://github.com/boltlabs-inc/dialectic.git", branch = "main" }
comfy-table = "3.0.0"
sqlx = { version = "0.5.2", features = ["any", "migrate", "offline", "runtime-tokio-rustls", "sqlite"] }
tezedge = { package = "lib", git = "https://github.com/boltlabs-inc/tezedge-client", branch = "develop" }
canonicalize_json_micheline = { path = "src/canonicalize_json_micheline" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-futures = "0.2"

[dev-dependencies]
rand = "0.8.3"
strum = "0.21"
strum_macros = "0.21"

[build-dependencies]
canonicalize_json_micheline = { path = "src/canonicalize_json_micheline" }

[[test]]
name = "integration_tests"
path = "integration_tests/main.rs"
harness = false